force-app/main/default/objects/Landing_Sync__c/Landing_Sync__c.object-meta.xml
<CustomObject>
    <label>inwise Landing Sync</label>
    <nameField>
        <label>Sync Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>inwise Landing Sync</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>