force-app/main/default/objects/Landing_Sync__c/fields/Last_Run_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Run_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Run By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>inwise_Landing_Sync</relationshipName>
    <type>Lookup</type>
</CustomField>