force-app/main/default/objects/Landing_Sync__c/fields/Scheduled_Daily_At__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Daily_At__c</fullName>
    <label>Scheduled Daily At</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12:00 AM</fullName>
            </value>
            <value>
                <fullName>1:00 AM</fullName>
            </value>
            <value>
                <fullName>2:00 AM</fullName>
            </value>
            <value>
                <fullName>3:00 AM</fullName>
            </value>
            <value>
                <fullName>4:00 AM</fullName>
            </value>
            <value>
                <fullName>5:00 AM</fullName>
            </value>
            <value>
                <fullName>6:00 AM</fullName>
            </value>
            <value>
                <fullName>7:00 AM</fullName>
            </value>
            <value>
                <fullName>8:00 AM</fullName>
            </value>
            <value>
                <fullName>9:00 AM</fullName>
            </value>
            <value>
                <fullName>10:00 AM</fullName>
            </value>
            <value>
                <fullName>11:00 AM</fullName>
            </value>
            <value>
                <fullName>12:00 PM</fullName>
            </value>
            <value>
                <fullName>1:00 PM</fullName>
            </value>
            <value>
                <fullName>2:00 PM</fullName>
            </value>
            <value>
                <fullName>3:00 PM</fullName>
            </value>
            <value>
                <fullName>4:00 PM</fullName>
            </value>
            <value>
                <fullName>5:00 PM</fullName>
            </value>
            <value>
                <fullName>6:00 PM</fullName>
            </value>
            <value>
                <fullName>7:00 PM</fullName>
            </value>
            <value>
                <fullName>8:00 PM</fullName>
            </value>
            <value>
                <fullName>9:00 PM</fullName>
            </value>
            <value>
                <fullName>10:00 PM</fullName>
            </value>
            <value>
                <fullName>11:00 PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>